# Asteroids

./: .gitignore  README.md  asteroids.cabal  highscores.txt  my-gloss.cabal
bitmaps/: .bulletSkin.bmp.icloud  .spaceshipSkin.bmp.icloud
dist-newstyle/cache/: compiler  config  config77174-0.tmp  config77340-0.tmp  config77729-0.tmp  config78732-0.tmp  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Asteroid.hs  Bullet.hs  Controller.hs  Highscores.hs  HitBox.hs  Main.hs  Model.Asteroid.hs  Model.Spaceship.hs  Model.UFO.hs  Model.hs  Spaceship.hs  UFO.hs  View.hs  high-scores.txt
src/Auxiliary/: Constants.hs  Operations.hs
src/Model/: Model.hs  Spaceship.hs
