name:                asteroids
version:             0.1.0.0
author:              Tomàs Tavares & Diede Adjei-Asamoah
maintainer:          tomastavares21122001@gmail.com & diedeadjei@gmail.com 
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable my-gloss
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       containers,
                       aeson
  hs-source-dirs:      src
  other-modules:       Controller
                     , Spaceship
                     , Asteroid
                     , UFO
                     , Model
                     , Hitbox
                     , Bullet
                     , View
                     , HighScores
                     , Auxiliary.Constants
                     , Auxiliary.Operations
  default-language:    Haskell2010
