name:                my-gloss
version:             0.1.0.0
author:              Tomàs Tavares & Diede Adjei-Asamoah
maintainer:          tomastavares21122001@gmail.com & diedeadjei@gmail.com 
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable my-gloss
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model.Spaceship
                     , Model.Asteroid
                     , Model.UFO
                     , View
  default-language:    Haskell2010
